# serializer version: 1
# name: test_actions_cannot_connect[number.set_value-number-payload0]
  dict({
    'attributes': dict({
      'device_class': 'ph',
      'friendly_name': 'Pool Device pH target',
      'max': 8,
      'min': 6,
      'mode': 'auto',
      'step': 0.1,
    }),
    'context': dict({
      'id': '<context>',
      'parent_id': None,
      'user_id': None,
    }),
    'entity_id': 'number.pool_device_ph_target',
    'state': '6.5',
  })
# ---
# name: test_actions_cannot_connect[number.set_value-number-payload0].1
  dict({
    'attributes': dict({
      'device_class': 'ph',
      'friendly_name': 'Pool Device pH target',
      'max': 8,
      'min': 6,
      'mode': 'auto',
      'step': 0.1,
    }),
    'context': dict({
      'id': '<context>',
      'parent_id': None,
      'user_id': None,
    }),
    'entity_id': 'number.pool_device_ph_target',
    'state': '6.5',
  })
# ---
# name: test_actions_cannot_connect[select.select_option-select-payload2]
  dict({
    'attributes': dict({
      'friendly_name': 'Pool Device pH dosing set',
      'options': list([
        'alcalyne',
        'acid',
      ]),
    }),
    'context': dict({
      'id': '<context>',
      'parent_id': None,
      'user_id': None,
    }),
    'entity_id': 'select.pool_device_ph_dosing_set',
    'state': 'acid',
  })
# ---
# name: test_actions_cannot_connect[select.select_option-select-payload2].1
  dict({
    'attributes': dict({
      'friendly_name': 'Pool Device pH dosing set',
      'options': list([
        'alcalyne',
        'acid',
      ]),
    }),
    'context': dict({
      'id': '<context>',
      'parent_id': None,
      'user_id': None,
    }),
    'entity_id': 'select.pool_device_ph_dosing_set',
    'state': 'acid',
  })
# ---
# name: test_actions_cannot_connect[switch.turn_on-switch-payload1]
  dict({
    'attributes': dict({
      'friendly_name': 'Pool Device Pause dosing',
    }),
    'context': dict({
      'id': '<context>',
      'parent_id': None,
      'user_id': None,
    }),
    'entity_id': 'switch.pool_device_pause_dosing',
    'state': 'off',
  })
# ---
# name: test_actions_cannot_connect[switch.turn_on-switch-payload1].1
  dict({
    'attributes': dict({
      'friendly_name': 'Pool Device Pause dosing',
    }),
    'context': dict({
      'id': '<context>',
      'parent_id': None,
      'user_id': None,
    }),
    'entity_id': 'switch.pool_device_pause_dosing',
    'state': 'off',
  })
# ---
# name: test_actions_write_rejected[number.set_value-number-payload0]
  dict({
    'attributes': dict({
      'device_class': 'ph',
      'friendly_name': 'Pool Device pH target',
      'max': 8,
      'min': 6,
      'mode': 'auto',
      'step': 0.1,
    }),
    'context': dict({
      'id': '<context>',
      'parent_id': None,
      'user_id': None,
    }),
    'entity_id': 'number.pool_device_ph_target',
    'state': '6.5',
  })
# ---
# name: test_actions_write_rejected[number.set_value-number-payload0].1
  dict({
    'attributes': dict({
      'device_class': 'ph',
      'friendly_name': 'Pool Device pH target',
      'max': 8,
      'min': 6,
      'mode': 'auto',
      'step': 0.1,
    }),
    'context': dict({
      'id': '<context>',
      'parent_id': None,
      'user_id': None,
    }),
    'entity_id': 'number.pool_device_ph_target',
    'state': '6.5',
  })
# ---
# name: test_actions_write_rejected[select.select_option-select-payload2]
  dict({
    'attributes': dict({
      'friendly_name': 'Pool Device pH dosing set',
      'options': list([
        'alcalyne',
        'acid',
      ]),
    }),
    'context': dict({
      'id': '<context>',
      'parent_id': None,
      'user_id': None,
    }),
    'entity_id': 'select.pool_device_ph_dosing_set',
    'state': 'acid',
  })
# ---
# name: test_actions_write_rejected[select.select_option-select-payload2].1
  dict({
    'attributes': dict({
      'friendly_name': 'Pool Device pH dosing set',
      'options': list([
        'alcalyne',
        'acid',
      ]),
    }),
    'context': dict({
      'id': '<context>',
      'parent_id': None,
      'user_id': None,
    }),
    'entity_id': 'select.pool_device_ph_dosing_set',
    'state': 'acid',
  })
# ---
# name: test_actions_write_rejected[switch.turn_on-switch-payload1]
  dict({
    'attributes': dict({
      'friendly_name': 'Pool Device Pause dosing',
    }),
    'context': dict({
      'id': '<context>',
      'parent_id': None,
      'user_id': None,
    }),
    'entity_id': 'switch.pool_device_pause_dosing',
    'state': 'off',
  })
# ---
# name: test_actions_write_rejected[switch.turn_on-switch-payload1].1
  dict({
    'attributes': dict({
      'friendly_name': 'Pool Device Pause dosing',
    }),
    'context': dict({
      'id': '<context>',
      'parent_id': None,
      'user_id': None,
    }),
    'entity_id': 'switch.pool_device_pause_dosing',
    'state': 'off',
  })
# ---
